# Auth-Service

./: .env  Cargo.toml
migrations/: 0001_account_table.sql
sql/: find_account.sql  get_account_by_id.sql  get_auth_info.sql  insert_account.sql
src/: dba.rs  error.rs  handlers.rs  main.rs  model.rs
src/config/: db.rs  redis.rs
src/error/: db_error.rs  mod.rs  redis_error.rs  service_error.rs
src/handlers/: account_handler.rs  auth_handler.rs  mod.rs
src/middleware/: auth_middleware.rs  rbac_middleware.rs
src/model/: account.rs  token.rs
src/repository/: account_repo.rs  mod.rs  redis_repo.rs  token_redis_repo.rs
src/service/: account_service.rs  auth_service.rs  mod.rs  token_service.rs
src/traits/: account_trait.rs  mod.rs  redis_traits.rs
src/utils/: jwt.rs  password.rs
