[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
dotenvy = "0.15.7"
log = "0.4.26"
env_logger = "0.11.6"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
jsonwebtoken = "9.3.1"
redis = "0.29.0"
argon2 = "0.5.3"
derive_more = { version = "2.0.1", features = ["full"] }
thiserror = "2.0.11"